--- a/app/src/main/res/layout/album_activity_thumbnails.xml
+++ b/app/src/main/res/layout/album_activity_thumbnails.xml
@@ -9,7 +9,9 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
+            android:paddingTop="100px"
             android:id="@+id/recyclerView_thumbnails"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/img_background"/>
