--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="color_login_textView_background">#35000000</color>
     <color name="color_login_textView_border">#000</color>
     <color name="color_text">#fff</color>
+    <color name="color_text2">#000</color>
 </resources>
