--- a/app/src/main/res/layout/activity_category_main.xml
+++ b/app/src/main/res/layout/activity_category_main.xml
@@ -1,5 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WiFi" />
+
+    <TextView
+        android:id="@+id/textView_wifi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="اتصال به وای‌فای"
+        android:textSize="@dimen/font_medium"
+        android:textColor="@color/colorAccent"
+        android:layout_below="@id/toggleButton"
+        android:background="@color/colorPrimary"/>
+
+<LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -148,3 +170,5 @@
     </LinearLayout>
 
 </LinearLayout>
+
+</RelativeLayout>
